--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ monitor=,1920x1080,auto,auto
 $terminal = ghostty
 $fileManager = dolphin
 $menu = wofi --show drun
-$browser = firefox
+$browser = zen-browser
 
 #################
 ### AUTOSTART ###
@@ -52,10 +52,10 @@ $browser = firefox
 exec-once = waybar
 exec-once = hyprpaper
 
-exec-once = [workspace 1 silent] ghostty
-exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 1 silent] $browser
+exec-once = [workspace 2 silent] ghostty
 exec-once = [workspace 3 silent] ghostty
-exec-once = [workspace 4 silent] discord
+#exec-once = [workspace 4 silent] discord
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -244,10 +244,10 @@ bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, F5, exec, pkexec brillo -q -U 10
 bind = $mainMod, F6, exec, pkexec brillo -q -A 10
 
-bind = $mainMod, F3, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bind = $mainMod, F2, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = $mainMod, F1, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bind = $mainMod, F4, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+#bind = $mainMod, F3, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+#bind = $mainMod, F2, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+#bind = $mainMod, F1, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+#bind = $mainMod, F4, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
