--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,8 +23,20 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,1920x1080,auto,auto
+monitor= DP-1 ,1920x1080@144, 1920x0, 1
+monitor= HDMI-A-1, 1920x1080@60, 0x0, 1
 
+workspace=1,monitor:DP-1
+workspace=2,monitor:DP-1
+workspace=3,monitor:DP-1
+workspace=4,monitor:DP-1
+workspace=5,monitor:DP-1
+workspace=6,monitor:DP-1
+workspace=7,monitor:DP-1
+workspace=8,monitor:DP-1
+workspace=9,monitor:DP-1
+workspace=10,monitor:HDMI-A-1
+workspace=11,monitor:HDMI-A-1
 
 ###################
 ### MY PROGRAMS ###
@@ -93,7 +105,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -112,8 +124,8 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-    rounding_power = 2
+    #rounding = 10
+    #rounding_power = 2
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
