--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -10,10 +10,8 @@
     "margin-left": 5, 
 
     "modules-left": [
-        "custom/rofi",
         "custom/weather",
         "custom/khorshididate",
-        "clock",
         "wlr/taskbar",
     ],
 
@@ -31,31 +29,9 @@
         "memory",
         "disk",
         "temperature",
-        "custom/updates",
-        "network",
-        "hyprland/language",
-        "custom/lock_screen",
-        "custom/power"
+        "clock",
     ],
 
-    "custom/rofi": {
-        "format": "",
-        "on-click": "rofi -theme ~/.config/rofi/theme/onedark_mini.rasi -show drun",
-        "tooltip": false
-    },
-
-    "custom/power": {
-        "format": "",
-        "on-click": "sysact",
-        "tooltip": false
-    },
-
-
-    "custom/lock_screen": {
-        "format": "",
-        "on-click": "sh -c '(sleep 0.5s; swaylock -eFfki ~/Pictures/lockscreen.png)' & disown",
-        "tooltip": false
-    },
 
     "hyprland/workspaces": {
         "on-click": "activate",
@@ -94,9 +70,7 @@
 
     "memory": {
         "interval": 30,
-        "format": "",
-        "format-alt-click": "click-right",
-        "format-alt": " {}%",
+        "format": " {}%",
         "max-length": 10,
         "tooltip": true,
         "tooltip-format": "Memory - {used:0.1f}GB used",
@@ -104,10 +78,8 @@
     
     "disk": {
         "interval": 600,
-        "format": "󰋊",
+        "format": "󰋊 {percentage_used}%",
         "path": "/",
-        "format-alt-click": "click-right",
-        "format-alt": "󰋊 {percentage_used}%",
         "tooltip": true,
         "tooltip-format": "HDD - {used} used out of {total} on {path} ({percentage_used}%)",
         "states": {
@@ -118,9 +90,7 @@
 
     "temperature": {
         "thermal-zone": 1,
-        "format": "",
-        "format-alt-click": "click-right",
-        "format-alt": " {temperatureC}°C",
+        "format": " {temperatureC}°C",
         "critical-threshold": 70,
         "format-critical": " {temperatureC}°C",
     },
@@ -217,8 +187,8 @@
     },
 
     "clock": {
-        "timezone": "Asia/Tehran",
-        "format": "{: %H:%M}",
+        "timezone": "Europe/Copenhagen",
+        "format": "{:%H:%M}",
         "tooltip": true,
         "on-click": "setbg",
         "tooltip-format": "{: %A, %B %e %Y}"
