--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -103,15 +103,20 @@ env = HYPRCURSOR_SIZE,24
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 
 # https://wiki.hypr.land/Configuring/Variables/#general
+
+$base_color = ebbcbaee
+$gray = 595959aa
+$white = ffffffee
+
 general {
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 0
 
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba($base_color) rgba($white)
+    col.inactive_border = rgba($gray)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
