--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,5 @@
 
+$P_NAME = black.png
 
-preload = /home/archrat/Pictures/bloveb.jpg
-wallpaper = , /home/archrat/Pictures/bloveb.jpg
+preload = $HOME/Pictures/black.jpg
+wallpaper = , $HOME/Pictures/black.jpg
