--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -10,7 +10,6 @@
     "margin-left": 5, 
 
     "modules-left": [
-        "custom/weather",
         "custom/khorshididate",
         "wlr/taskbar",
     ],
@@ -20,7 +19,6 @@
     ],
 
     "modules-right": [
-        "tray",
         "battery",
         "pulseaudio",
         "pulseaudio#microphone",
@@ -62,7 +60,7 @@
 
     "cpu": {
         "interval": 10,
-        "format": "",
+        "format": "CPU {}%",
         "max-length": 10,
         "format-alt-click": "click-right",
         "format-alt": " {usage}%",
@@ -70,7 +68,7 @@
 
     "memory": {
         "interval": 30,
-        "format": " {}%",
+        "format": "RAM {}%",
         "max-length": 10,
         "tooltip": true,
         "tooltip-format": "Memory - {used:0.1f}GB used",
@@ -78,10 +76,10 @@
     
     "disk": {
         "interval": 600,
-        "format": "󰋊 {percentage_used}%",
+        "format": "DISK {percentage_used}%",
         "path": "/",
         "tooltip": true,
-        "tooltip-format": "HDD - {used} used out of {total} on {path} ({percentage_used}%)",
+        "tooltip-format": "DISK - {used} used out of {total} on {path} ({percentage_used}%)",
         "states": {
             "warning": 85,
             "critical": 90,
@@ -90,7 +88,7 @@
 
     "temperature": {
         "thermal-zone": 1,
-        "format": " {temperatureC}°C",
+        "format": "TEMP{temperatureC}°C",
         "critical-threshold": 70,
         "format-critical": " {temperatureC}°C",
     },
@@ -155,24 +153,6 @@
         "on-scroll-down": "decbrightness"
     },
 
-    "custom/weather": {
-        //shows the current weather and forecast
-        "tooltip" : true,
-        "format" : "{}",
-        "interval" : 3600,
-        "exec" : "~/.config/waybar/scripts/wttr.py",
-        "return-type" : "json"
-    },
-
-    "custom/updates": {
-        "format": "{}",
-        "exec": "~/.config/waybar/scripts/update-sys",
-        "on-click": "~/.config/waybar/scripts/update-sys update",
-        "interval": 3600,
-        "tooltip": true,
-        "signal": 8,
-        "return-type" : "json"
-    },
 
     "network": {
         "format": "{ifname}",
