--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -64,6 +64,7 @@ $browser = zen-browser
 exec-once = waybar
 exec-once = hyprpaper
 
+exec-once = [workspace 10 silent] $browser
 exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 2 silent] ghostty
 exec-once = [workspace 3 silent] ghostty
