--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,3 +5,8 @@ bind-key C-a send-prefix
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
+
+
+# color
+set -g status-bg pink
+set -g status-fg black
